<resources>
    <string name="app_name">briefact</string>

    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Create account</string>
    <string name="new_here">New here?</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="your_skan">Your scan:</string>
    <string name="will_be_here">*will appear here*</string>
    <string name="add">Finish</string>
    <string name="empty_notes">Here could be your first note. Make it!</string>
    <string name="search_here">Search notes</string>

    <string name="bottom_sheet_dialog_hint_title">Here\'s your title</string>
    <string name="login_failed">"Login failed due technical problems. Check your internet connection and try again later!"</string>
    <string name="welcome1">Welcome to your own briefact!</string>
    <string name="welcome12">This app was created for business people, students, teachers who want to provide and learn brief, interesting and quick information!</string>
    <string name="welcome13">Well! Lets finally get acquainted! (to be honest, I have been waiting for this for a very looooooong time)</string>
    <string name="welcome14">You have 2 ways to enter - <b>sign in</b> or <b>create</b> account(don\'t worry, this will take brief moment)</string>
    <string name="login_text1">Hey there!</string>
    <string name="login_text11">Since you came here, it means you were here before! Let\’s log in again :)</string>
    <string name="login_text2">Your data:</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_name">Name(Nickname)</string>
    <string name="login_password_confirm">Confirm password</string>
    <string name="register_hint1">1. name texts here</string>
    <string name="register_hint2">2. also your email:</string>
    <string name="register_hint3">3. your password</string>
    <string name="register_hint4">4. again please(i might already forget it)</string>
    <string name="register_text1">And the final step before your first own, cool and unique note: come up with a password that will not be hacked(it will be used for app backup)</string>
    <string name="loged_out">Logout successfully!</string>
    <string name="new_note">New note</string>


    <!-- registration -->
    <string name="emailWarning">Email was not entered</string>
    <string name="passwordWarning">Password mismatch!</string>
    <string name="registerSuccess">Account was successfully created!</string>
    <string name="registerFailed">Account was not created due some technical problems. Try again later!</string>
    <string name="registerFailedPasOrEmail">All inputs required!</string>
    <string name="next">next</string>
    <string name="finish">Finish</string>
    <string name="last">Last scan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Notes-->
    <string name="noTitle">Title required!</string>
    <string name="noteCreated">Note created successfully!</string>
    <string name="noteNotCreated">Failed to create note</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="sort">Sort by</string>
    <string name="language_tv">Language: %s</string>
    <string name="deleted_successfully">Deleted successfully!</string>
    <string name="not_deleted">Something went wrong. Note is not deleted</string>
    <string name="note_updated">Note updated successfully!</string>
    <string name="note_is_not_updated">Something went wrong. Note is not updated</string>

    <!--OCR USE-->
    <!-- various key to store the setting values -->
    <string name="log_out" translatable="false">log_out</string>

    <string name="key_language_for_tesseract" translatable="false">language_for_tesseract</string>
    <string name="key_tess_training_data_source" translatable="false">tess_training_data_source</string>
    <string name="key_grayscale_image_ocr" translatable="false">grayscale_image_ocr</string>
    <string name="key_last_use_image_location" translatable="false">last_use_image_location</string>
    <string name="key_last_use_image_text" translatable="false">last_use_image_text</string>
    <string name="key_draw_box" translatable="false">key_draw_box</string>
    <string name="key_persist_data" translatable="false">persist_data</string>
    <string name="key_language_for_tesseract_multi" translatable="false">multi_languages</string>
    <string name="key_ocr_psm_mode">key_ocr_psm_mode</string>
    <string name="fbs" translatable="false">Best or Fast</string>
    <string name="account_label" translatable="true">Account info</string>
    <string name="account_email_title" translatable="true">Using account:</string>
    <string name="account_email_content" translatable="true">%1$d</string>
    <string name="key_account_email_content" translatable="true">%1$d</string>
    <string name="account_name_title" translatable="true">Username:</string>
    <string name="account_name_content" translatable="true">%1$s</string>
    <string name="key_account_name_content" translatable="true">%1$s</string>

    <string name="key_contrast" translatable="false">process_contrast</string>
    <string name="key_un_sharp_masking" translatable="false">un_sharp_mask</string>
    <string name="key_otsu_threshold" translatable="false">otsu_threshold</string>
    <string name="key_find_skew_and_deskew" translatable="false">deskew_img</string>
    <string name="key_enable_multiple_lang" translatable="false">key_enable_multiple_lang</string>

    <string name="language">Language</string>
    <string name="use_gray_scale_image_for_ocr">Pre-Process Image</string>
    <string name="gray_scale_detail">Pre-process image for enhanced accuracy</string>
    <string name="tess_language_title">Select language</string>
    <string name="download_language_data_please_wait">Downloading OCR data files. Please wait …</string>
    <string name="installing_please_wait">Installing OCR data files.  Please wait…</string>
    <string name="language_not_exists">Training data for language %s  does not exist; cannot do recognition</string>
    <string name="settings">Settings</string>
    <string name="segmentation_mode">Page segmentation mode</string>

    <string name="draw_box_summary">App will draw text on image</string>
    <string name="draw_box_title">Draw text on image</string>
    <string name="no_results">No text could be recognized.</string>
    <string name="converting_image">Converting Image to text…</string>
    <string name="downloading">Downloading…</string>
    <string name="downloading_language">Downloading language data…  Please, do not leave an app.</string>
    <string name="show_last_result">Show last result</string>
    <string name="text_goes_here">Text goes here</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="share">Share</string>
    <string name="persist_data_summary">Save image and text after the app closes</string>
    <string name="persist_data_title">Save data</string>
    <string name="percentage_downloaded">% of total:</string>
    <string name="internet_issues">Something goes wrong. Check your connection.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="training_data_missing">Training data missing!</string>
    <string name="download_description">For proper functioning of Tesseract OCR additional training data needs to be downloaded to your device.\nDo you want to download selected language (%s) data?</string>
    <string name="refresh">Refresh</string>
    <string name="tesseract_data">Tesseract Settings</string>
    <string name="text">Text</string>
    <string name="photo">Photo</string>
    <string name="select_tesseract_data_type">Select Tesseract Data type</string>
    <string name="others_settings">Other Settings</string>
    <string name="open_source_statement">Here you can visit my profile on GitHub.</string>
    <string name="source_code">Source code</string>
    <string name="generic_image_description">Image</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>

    <string name="contrast_summary">Adaptively attempts to expand the contrast to the full dynamic range</string>
    <string name="un_sharp_masking_summary">Performs unsharp masking (edge enhancement) of image</string>

    <string name="otsu_summary">Performs locally-adaptive Otsu threshold binarization of image</string>
    <string name="deskew_summary">Find the Skew and Deskew the Image</string>
    <string name="perform_contrast">Enhance Contrast</string>
    <string name="un_sharp_masking">Un-Sharp Masking</string>
    <string name="otsu_threshold">OTSU Threshold</string>
    <string name="deskew_image">Deskew Image</string>
    <string name="advance_settings">Advanced Settings</string>
    <string name="advance_setting_summary">Functions related to image processing</string>
    <string name="image_enhancement">Image Enhancement</string>
    <string name="languages">Languages</string>
    <string name="select_multi_training_data_title">Select Multiple languages</string>
    <string name="multiple_lang_summary">Training data in multiple languages</string>
    <string name="select_multi_languages_title">Select Multiple languages</string>
    <string name="image_processing_functions">Image processing functions</string>
    <string name="advance_tesseract_settings">Advance Tesseract Settings</string>
    <string name="psm_summary">It directs how Tesseract splits image in lines of text and words.</string>

    <!--Languages-->
    <string name="lan_english">English</string>
    <string name="lan_arabic">Arabic</string>
    <string name="lan_belarusian">Belarusian</string>
    <string name="lan_bulgarian">Bulgarian</string>
    <string name="lan_czech">Czech</string>
    <string name="lan_russian">Russian</string>
    <string name="lan_hindi">Hindi</string>

    <!--Translation-->
    <string name="translate">Translate</string>
    <string name="translate_title">Translate</string>
    <string name="translate_source">Please select Source Language</string>
    <string name="translate_target">Please select the language to make translation</string>
    <string name="translate_downloading">Downloading model, please wait…</string>
    <string name="translate_here">Translated text appears here</string>
    <string name="translate_text">Type some text here</string>
    <string name="translation">Translation…</string>
    <string name="translation_failed">Failed to translate! Try again…</string>
    <string name="translate_failed_downloading">Failed to download model! Check your internet connection.</string>

    <!--forgot activity-->
    <string name="message1">Whats a pitty!</string>
    <string name="message2">Please enter your registered email to receive instructions for reseting passowrd!</string>
    <string name="send">Send</string>
    <string name="go_back">Go back</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="wait">Please wait</string>
    <string name="enter_email">Enter email…</string>
    <string name="wrong_email">Thats not an email, please enter the right one</string>
    <string name="sending">Sending a message with instructions to</string>
    <string name="sent">Sent, please check your mail</string>
    <string name="not_sent">Some error found, check your internet connection</string>
</resources>