<PreferenceScreen

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/account_label">

        <Preference
            android:selectable="false"
            android:enabled="true"
            android:key="@string/key_account_email_content"
            android:title="@string/account_email_title"
            android:summary="@string/account_email_content" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/tesseract_data">
        <ListPreference
            android:defaultValue="best"
            android:entries="@array/ocr_training_data_entries"
            android:entryValues="@array/key_ocr_training_data_entries_values"
            android:key="@string/key_tess_training_data_source"
            android:summary="@string/fbs"
            android:title="@string/select_tesseract_data_type"
            app:icon="@drawable/ic_baseline_fact_check_24" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_enable_multiple_lang"
            android:summary="@string/multiple_lang_summary"
            android:title="@string/select_multi_languages_title"
            app:icon="@drawable/ic_baseline_checklist_24"/>

        <ListPreference
            android:defaultValue="eng"
            android:entries="@array/ocr_engine_language"
            android:entryValues="@array/key_ocr_engine_language_value"
            android:key="@string/key_language_for_tesseract"
            android:summary="@string/language"
            android:title="@string/tess_language_title"
            app:icon="@drawable/ic_baseline_language_24_red" />

        <MultiSelectListPreference

            android:entries="@array/ocr_engine_language"
            android:entryValues="@array/key_ocr_engine_language_value"
            android:key="@string/key_language_for_tesseract_multi"
            android:summary="@string/languages"
            android:title="@string/select_multi_training_data_title"
            app:icon="@drawable/ic_baseline_language_24" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/advance_tesseract_settings"
        app:isPreferenceVisible="false">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/key_ocr_psm_mode"
            android:entryValues="@array/value_ocr_psm_mode"
            android:key="@string/key_ocr_psm_mode"
            android:summary="@string/psm_summary"
            android:title="@string/segmentation_mode"
            app:icon="@drawable/ic_baseline_page_seg_32" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/others_settings"
        app:isPreferenceVisible="false">
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_baseline_save_32"
            android:key="@string/key_persist_data"
            android:summary="@string/persist_data_summary"
            android:title="@string/persist_data_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:icon="@drawable/ic_baseline_source_32"
            android:summary="@string/open_source_statement"
            android:title="@string/source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/lountoa/briefact" />
        </Preference>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/others_settings">

        <Preference
            android:icon="@drawable/ic_baseline_logout_32"
            android:title="@string/logout"
            android:key="@string/log_out">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
