<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/open_sans_llight"
        android:gravity="left"
        android:text="@string/login_text1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_llight"
        android:gravity="left"
        android:text="@string/login_text2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/title2"
        app:layout_constraintStart_toStartOf="@+id/title2"
        app:layout_constraintTop_toBottomOf="@+id/title2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#0000"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:padding="20sp"
            android:drawablePadding="12dp"
            android:fontFamily="@font/open_sans_llight"
            android:hint="@string/login_email"
            app:layout_constraintEnd_toEndOf="@+id/title2"
            app:layout_constraintStart_toStartOf="@+id/title2"
            app:layout_constraintTop_toBottomOf="@+id/title2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleContentDescription="password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/banner1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#0000"
            android:drawableStart="@drawable/ic_baseline_password_24"
            android:drawablePadding="12dp"
            android:fontFamily="@font/open_sans_llight"
            android:hint="@string/login_password"
            android:padding="20sp"
            app:layout_constraintEnd_toEndOf="@+id/title2"
            app:layout_constraintStart_toStartOf="@+id/title2"
            app:layout_constraintTop_toBottomOf="@+id/title2" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginSignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/banner1"
        android:fontFamily="@font/open_sans"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_baseline_check_circle_24"
        android:padding="16sp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>