<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:text="@string/message1"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/string"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/string2"
        app:layout_constraintEnd_toEndOf="@+id/title2"
        app:layout_constraintStart_toStartOf="@+id/title2"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="32dp"
        android:text="@string/message2"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_login_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:fontFamily="@font/montserrat_medium"
            android:text="Email"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/recoveryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_on_button_click"
            android:fontFamily="@font/montserrat_medium"
            android:padding="16sp"
            android:layout_marginTop="36dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/loginEmail1"
            app:layout_constraintStart_toStartOf="@+id/loginEmail1"
            app:layout_constraintTop_toBottomOf="@+id/loginEmail1" />

        <TextView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/go_back"
            android:textColor="@color/mainColor5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recoveryButton"
            app:layout_constraintStart_toStartOf="@+id/recoveryButton"
            app:layout_constraintTop_toBottomOf="@+id/recoveryButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmail1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextColor="@color/mainColor5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recoveryEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_baseline_mail_24"
                android:drawablePadding="12dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:focusedByDefault="true"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/login_email"
                android:textColorHint="#333333"
                android:background="#0000"
                android:inputType="textEmailAddress"
                android:padding="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>